# bmgen

./: .gitignore  .gitlab-ci.yml  README.md  bmgen3000.js  build.sh  build_docs.sh  index.html  install.sh  main.js  make.sh  no_blockly.html  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: documentation.yml  publish-to-pypi.yml
bts600/js/: generate_parser.js
custom/: blockly_extension.js  blocks.js  deps.js  import_json_program.js
custom/blockly_developer_tools/: blocks.json  bmgen_blocks.js  bmgen_library.xml  bmgen_toolbox.xml  codegen.js  library.xml  toolbox.xml
custom/bmgen/: bmgen_to_xml.js
custom/bts600/: bts600.pegjs  bts_simplify.js  parser.js  parsetree.js  program_to_bm.js  program_to_table.js  program_to_text.js  program_to_xml.js
custom/generators/: bmgen.js  bts600.js
custom/generators/bmgen/: arrays.js  channels.js  control_flow.js  limits.js  math.js  other.js  registrations.js  statements.js  variables.js
custom/generators/bts600/: actions.js  channels.js  jumps.js  labels.js  limits.js  logic.js  math.js  operators.js  variables.js
custom/toolbox/: dynamic_categories.js
examples/: advanced_program.py  battery_parameters.py  charge_reference.py  eba_oslib_captest.bmgen  eba_oslib_eis.bmgen  eba_oslib_formation.bmgen  example_loops.py  simple_program.py
parser/: bmgen.pegjs  bmgen_parser.js  bmgen_to_bts.js  bts600.h  bts600.lex  bts600.yacc  bts600_to_json.c  generate_parser.js  make.sh  pde_SA35E_Cyc100.bmgen  pde_SA35E_Cyc100.bts  pde_SA35E_Cyc100.json
sphinx/: battery_parameters.rst  conf.py  cycling_languages.rst  index.rst  setup.rst  structure.rst
src/bmgen/: __init__.py  __main__.py  base_generator.py  battery.py  bmgen.py  channel.py  converter.py  function.py  stepinfo.py  transformer.py
src/bmgen/targets/basytec/: __init__.py  ast.py  battery.py  channel.py  constants.py  ctrl.py  function.py  program.py  stepinfo.py
src/bmgen/util/: import_bm_sql.py  import_jsonld.py  import_pln.py
src/bmgen/web/: .env  devserver.sh  docker-compose.yml  nginx.conf
tests/: run_tests.py
tests/basytec/table/: battery_params  channels  loops  math  oneC  register  simple_charge_limit  simple_program  stepinfo  variables
tests/bm/table/: advanced_program  battery_params  channels  loops  math  oneC  register  simple_charge_limit  simple_program  stepinfo  variables
tests/bm/text/: advanced_program  battery_params  channels  loops  math  oneC  register  simple_charge_limit  simple_program  stepinfo  variables
tests/input/: advanced_program.py  battery_params.py  channels.py  loops.py  math.py  oneC.py  register.py  simple_charge_limit.py  simple_program.py  stepinfo.py  variables.py
tests/jsonld/html/: battery_params  loops  math  variables
tests/jsonld/json/: battery_params  loops  math  register  variables
tests/neware/table/: loops  math  simple_charge_limit  simple_program  stepinfo  variables
tests/neware/xml/: loops  math  register  simple_charge_limit  simple_program  stepinfo  variables
(+102 files in other folders)
