[project]
name = "bmgen"
version = "0.29.10"
description = "Test generator for battery cyclers"
authors = [
    { name = "Elias Barbers, Forschungszentrum Jülich (FZJ)", email = "e.barbers@fz-juelich.de" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "astor",
    "click",
    "flask",
    "flask_cors",
    "pandas",
    "lark",
]

[project.optional-dependencies]
sql = ["sqlalchemy", "pymssql"]
dev = [
    "sphinx==7.3.7",
    "pydata-sphinx-theme==0.16.0",
    "sphinx-click==6.0.0",
]

[project.scripts]
bmgen = "bmgen.bmgen:main"
bmgen-server = "bmgen.web.server.server:run"
bmgen-import = "bmgen.bmgen:import_file"

[project.urls]
Repository = "https://github.com/DigiBatt/bmgen"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]