[metadata]
name = bmgen
version = 0.12.5
author = Elias Barbers, ISEA, RWTH Aachen University
author_email = Elias.Barbers@isea.rwth-aachen.de
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://git.isea.rwth-aachen.de/ESS/testing/bmgen
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    astor
    click

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bmgen=bmgen.bmgen:main
