[metadata]
name = bmgen
version = file: src/bmgen/version
author = Elias Barbers, Forschungszentrum Jülich (FZJ)
author_email = e.barbers@fz-juelich.de
description = 
long_description = 
long_description_content_type = text/markdown
url = https://git.isea.rwth-aachen.de/ESS/testing/bmgen
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    astor
    click
    flask
    flask_cors
    cold

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bmgen=bmgen.bmgen:main
    bmgen-server=bmgen.web.server.server:run

[options.package_data]
bmgen = version
